History
=======

Version 0.6.11 - Unreleased
---------------------------

- Removed version pinning of zope.app.catalog to <= 3.6.0.  This is
  handled through our external extends file now.  See
  https://svn.plone.org/svn/collective/collective.dancing/buildout-extends/0.8.7.cfg
  and http://pypi.python.org/pypi/collective.dancing#installation
  [nouri]

Version 0.6.10 - 2009-02-01
---------------------------

- Changed eventhandlers for subscriptions indexing to look for
  the Subscriptions object in 'channel._subscriptions' first.
  This allows for a property decorated 'subscriptions' function
  that keeps data in '_subscriptions'.
  [tmog]

Version 0.6.9 - 2009-01-20
--------------------------

- Pinned zope.app.catalog version to pre 3.6.0 to avoid issue in
  https://bugs.launchpad.net/singing-dancing/+bug/301082
  [tmog]

Version 0.6.8 - 2009-01-02
--------------------------

- MessageQueues are now collective.singing.queue.CompositeQueue - an
  optimized version of zc.queue.CompositeQueue. This offers a _much_
  faster __len__ and  faster access to last queue element.
  Tests are stolen from zc.queue with added length checking everywhere.
  This maybe belongs directly in zc.queue, but adding stuff in zc namespace
  is not for me. ;-)  
  [tmog]
  
Version 0.6.7 - 2008-12-03
--------------------------

- Part of Czech translation.  
  [naro]

- Some refactoring in order to allow for more customized subscription forms.
  [nouri]

- Added french translation.

Version 0.6.6 - 2008-11-13
--------------------------

- Add the subscriber languages to subscription metadata at
  subscription time.  [nouri]

Version 0.6.5 - 2008-11-05
--------------------------

- Used ``i18ndude`` to find all untranslated msgid's. Some line-numbers were
  corrected, but nothing changed in ``collective.singing``.  There were some
  updates in collective.dancing, so all guy's please help updating 
  collective.dancing's po files.  [saily]
