@@ -4,6 +4,13 @@ History
 Version 0.6.11 - Unreleased
 ---------------------------
 
+- Added optional keyword argument 'override_vars' to IComposer.render and
+  MessageAssemble.__call__ methods. This is to facilitate overriding of
+  composer_vars. For example from the sendnewsletter.html form in
+  collective.dancing. Send-outs stored in TimedScheduler will now
+  also include 'override_vars'.
+  [tmog]
+
 - Removed version pinning of zope.app.catalog to <= 3.6.0.  This is
   handled through our external extends file now.  See
   https://svn.plone.org/svn/collective/collective.dancing/buildout-extends/0.8.7.cfg
